SASS and BEM metodology applied

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
           <p class="join-us">DOŁĄCZ DO NAS</p>
           <ul class="social-media-box footer-box">
             <li>
-              <a class="social-media-box_icon--footer" href="a">
+              <a class="social-media-box_icon social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
@@ -464,7 +464,7 @@
             </li>
 
             <li>
-              <a class="social-media-box_icon--footer" href="a">
+              <a class="social-media-box_icon social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
@@ -472,7 +472,7 @@
             </li>
 
             <li>
-              <a class="social-media-box_icon--footer" href="a">
+              <a class="social-media-box_icon social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
@@ -480,7 +480,7 @@
             </li>
 
             <li>
-              <a class="social-media-box_icon--footer" href="a">
+              <a class="social-media-box_icon social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
@@ -496,7 +496,7 @@
             <div class="newsletter-form">
               <label for="user-email"></label>
               <input
-                class="email-newsletter"
+                class="newsletter-form_input"
                 type="email"
                 name="email"
                 id="user-email"
