--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -100,208 +100,208 @@
 
             <!--drugie zdjęcie-->
             <li>
-              <a href="a"
-                ><div class="portfolio-box">
+              <a class="portfolio-element" href="a"
+                ><div class="portfolio-element_box">
                   <img
-                    class="images-portfolio"
+                    class="portfolio-element_box--image"
                     src="../images/portfolio2.jpg"
                     width="370"
                     height="294"
                     alt="zdjęcie koszykarzy"
                   />
                   <div>
-                    <p class="portfolio-overlay">
+                    <p class="portfolio-element_box--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                       koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
                       na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-icones">
-                  <h3 class="project-name">Grafika New Orlean vs Golden Star</h3>
-                  <p class="project-type">Dizajn</p>
+                <div class="portfolio-element_icones">
+                  <h3 class="portfolio-element_icones--name">Grafika New Orlean vs Golden Star</h3>
+                  <p class="portfolio-element_icones--type">Dizajn</p>
                 </div>
               </a>
             </li>
 
             <!--trzecie zdjęcie-->
             <li>
-              <a href="a"
-                ><div class="portfolio-box">
+              <a class="portfolio-element" href="a"
+                ><div class="portfolio-element_box">
                   <img
-                    class="images-portfolio"
+                    class="portfolio-element_box--image"
                     src="../images/portfolio3.jpg"
                     width="370"
                     height="294"
                     alt="zdjęcie logo restauracji seafood"
                   />
                   <div>
-                    <p class="portfolio-overlay">
+                    <p class="portfolio-element_box--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                       koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
                       na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-icones">
-                  <h3 class="project-name">Restauracja Seafood</h3>
-                  <p class="project-type">Aplikacja</p>
+                <div class="portfolio-element_icones">
+                  <h3 class="portfolio-element_icones--name">Restauracja Seafood</h3>
+                  <p class="portfolio-element_icones--type">Aplikacja</p>
                 </div>
               </a>
             </li>
 
             <!--czwarte zdjęcie-->
             <li>
-              <a href="a"
-                ><div class="portfolio-box">
+              <a class="portfolio-element" href="a"
+                ><div class="portfolio-element_box">
                   <img
-                    class="images-portfolio"
+                    class="portfolio-element_box--image"
                     src="../images/portfolio4.jpg"
                     width="370"
                     height="294"
                     alt="zdjęcie słuchawek"
                   />
                   <div>
-                    <p class="portfolio-overlay">
+                    <p class="portfolio-element_box--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                       koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
                       na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-icones">
-                  <h3 class="project-name">Projekt Prime</h3>
-                  <p class="project-type">Marketing</p>
+                <div class="portfolio-element_icones">
+                  <h3 class="portfolio-element_icones--name">Projekt Prime</h3>
+                  <p class="portfolio-element_icones--type">Marketing</p>
                 </div>
               </a>
             </li>
 
             <!--piąte zdjęcie-->
             <li>
-              <a href="a"
-                ><div class="portfolio-box">
+              <a class="portfolio-element" href="a"
+                ><div class="portfolio-element_box">
                   <img
-                    class="images-portfolio"
+                    class="portfolio-element_box--image"
                     src="../images/portfolio5.jpg"
                     width="370"
                     height="294"
                     alt="zdjęcie pudełek"
                   />
                   <div>
-                    <p class="portfolio-overlay">
+                    <p class="portfolio-element_box--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                       koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
                       na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-icones">
-                  <h3 class="project-name">Projekt Boxes</h3>
-                  <p class="project-type">Aplikacja</p>
+                <div class="portfolio-element_icones">
+                  <h3 class="portfolio-element_icones--name">Projekt Boxes</h3>
+                  <p class="portfolio-element_icones--type">Aplikacja</p>
                 </div>
               </a>
             </li>
 
             <!--szóste zdjęcie-->
             <li>
-              <a href="a"
-                ><div class="portfolio-box">
+              <a class="portfolio-element" href="a"
+                ><div class="portfolio-element_box">
                   <img
-                    class="images-portfolio"
+                    class="portfolio-element_box--image"
                     src="../images/portfolio6.jpg"
                     width="370"
                     height="294"
                     alt="zdjęcie dużego monitora ze stroną internetową"
                   />
                   <div>
-                    <p class="portfolio-overlay">
+                    <p class="portfolio-element_box--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                       koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
                       na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-icones">
-                  <h3 class="project-name">Inspiration has no Brothers</h3>
-                  <p class="project-type">Strona Internetowa</p>
+                <div class="portfolio-element_icones">
+                  <h3 class="portfolio-element_icones--name">Inspiration has no Brothers</h3>
+                  <p class="portfolio-element_icones--type">Strona Internetowa</p>
                 </div>
               </a>
             </li>
 
             <!--siódme zdjęcie-->
             <li>
-              <a href="a"
-                ><div class="portfolio-box">
+              <a class="portfolio-element" href="a"
+                ><div class="portfolio-element_box">
                   <img
-                    class="images-portfolio"
+                    class="portfolio-element_box--image"
                     src="../images/portfolio7.jpg"
                     width="370"
                     height="294"
                     alt="zdjęcie magazynu o dizajnie"
                   />
                   <div>
-                    <p class="portfolio-overlay">
+                    <p class="portfolio-element_box--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                       koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
                       na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-icones">
-                  <h3 class="project-name">Magazyn Limited Edition</h3>
-                  <p class="project-type">Dizajn</p>
+                <div class="portfolio-element_icones">
+                  <h3 class="portfolio-element_icones--name">Magazyn Limited Edition</h3>
+                  <p class="portfolio-element_icones--type">Dizajn</p>
                 </div>
               </a>
             </li>
 
             <!--ósme zdjęcie-->
             <li>
-              <a href="a"
-                ><div class="portfolio-box">
+              <a class="portfolio-element" href="a"
+                ><div class="portfolio-element_box">
                   <img
-                    class="images-portfolio"
+                    class="portfolio-element_box--image"
                     src="../images/portfolio8.jpg"
                     width="370"
                     height="294"
                     alt="zdjęcie metki towaru"
                   />
                   <div>
-                    <p class="portfolio-overlay">
+                    <p class="portfolio-element_box--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                       koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
                       na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-icones">
-                  <h3 class="project-name">Projekt LAB</h3>
-                  <p class="project-type">Marketing</p>
+                <div class="portfolio-element_icones">
+                  <h3 class="portfolio-element_icones--name">Projekt LAB</h3>
+                  <p class="portfolio-element_icones--type">Marketing</p>
                 </div>
               </a>
             </li>
 
             <!--dziewiąte zdjęcie-->
             <li>
-              <a href="a"
-                ><div class="portfolio-box">
+              <a class="portfolio-element" href="a"
+                ><div class="portfolio-element_box">
                   <img
-                    class="images-portfolio"
+                    class="portfolio-element_box--image"
                     src="../images/portfolio9.jpg"
                     width="370"
                     height="294"
                     alt="zdjęcie dłoni podczas pracy na laptopie"
                   />
                   <div>
-                    <p class="portfolio-overlay">
+                    <p class="portfolio-element_box--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                       koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
                       na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-icones">
-                  <h3 class="project-name">Growing Business</h3>
-                  <p class="project-type">Aplikacja</p>
+                <div class="portfolio-element_icones">
+                  <h3 class="portfolio-element_icones--name">Growing Business</h3>
+                  <p class="portfolio-element_icones--type">Aplikacja</p>
                 </div>
               </a>
             </li>
@@ -348,7 +348,7 @@
           <p class="join-us">DOŁĄCZ DO NAS</p>
           <ul class="social-media-box footer-box">
             <li>
-              <a href="a">
+              <a class="social-media-box_icon social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-instagram"></use>
                 </svg>
@@ -356,7 +356,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="social-media-box_icon social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-twitter"></use>
                 </svg>
@@ -364,7 +364,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="social-media-box_icon social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-facebook"></use>
                 </svg>
@@ -372,7 +372,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="social-media-box_icon social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="../images/icons.svg#icon-linkedin"></use>
                 </svg>
@@ -388,14 +388,14 @@
             <div class="newsletter-form">
               <label for="user-email"></label>
               <input
-                class="email-newsletter"
+                class="newsletter-form_input"
                 type="email"
                 name="email"
                 id="user-email"
                 placeholder="E-mail"
               />
               <button type="submit" class="button-newsletter">
-                <span>Zapisz się</span>
+                <span class="button-newsletter_singup">Zapisz się</span>
                 <svg width="24px" height="24px">
                   <use href="../images/icons.svg#icon-icon-send"></use>
                 </svg>
